updating UI with more actions

--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
             </div>
 
             <div style='padding:20px'>
-                <h4>Station 1</h4>
                 <!-- React component -->
-                <div id='boot_button_container'></div>
-
-                <h4>Station 2</h4>
+                <div id='station_container'></div>
             </div>
         </div>
 
@@ -31,5 +28,6 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
 
-    <script type="text/babel" src="js/ConnectButton.js"></script>
+    <script type="text/babel" src="js/Button.js"></script>
+    <script type="text/babel" src="js/Station.js"></script>
 </html>
