--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,10 @@
     <body>
 
         <div class="root" style="padding:0px;margin:0px">
-            <header class="mdc-top-app-bar" style="top:0px">
+            <header class="mdc-top-app-bar" style="top:0px;left:0px">
                 <div class="mdc-top-app-bar__row">
                     <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+                        <i class="material-icons mdc-top-app-bar__navigation-icon--unbounded">menu</i>
                         <span class="mdc-top-app-bar__title">OCPP client simulator</span>
                     </section>
                     <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
