--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
         <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <script src="data/users.js"></script>
+        <script src="data/chargepoints.js"></script>
     </head>
     <body>
 
